--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     .hero {
       margin-top: 80px;
       height: 100vh;
-      background-image: url('1737902797200-AoPq4kzM8gH46vke.jpg');
+      background-image: url('hero-spa.jpg');
       background-size: cover;
       background-position: center;
       position: relative;
