--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         <h3>Duo External</h3>
       </div>
       <div class="product">
-        <img src="maxi-internal.jpg" alt="Maxi External 2" />
+        <img src="maxi-internal.jpg" alt="Maxi internal" />
         <h3>Maxi External</h3>
       </div>
     </div>
