--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     .hero {
       margin-top: 80px;
       height: 100vh;
-      background-image: url('hero-spa.jpg');
+      background-image: url('hero-image.jpg');
       background-size: cover;
       background-position: center;
       position: relative;
@@ -105,9 +105,9 @@
 
     .product-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      grid-template-columns: repeat(2, 1fr);
       gap: 30px;
-      max-width: 1000px;
+      max-width: 800px;
       margin: 0 auto;
     }
 
@@ -121,7 +121,7 @@
 
     .product img {
       width: 100%;
-      height: 200px;
+      height: 250px;
       object-fit: cover;
     }
 
@@ -133,6 +133,12 @@
 
     .product:hover {
       transform: translateY(-5px);
+    }
+
+    @media (max-width: 600px) {
+      .product-grid {
+        grid-template-columns: 1fr;
+      }
     }
 
     @media (min-width: 768px) {
@@ -167,15 +173,15 @@
         <h3>Duo Internal</h3>
       </div>
       <div class="product">
-        <img src="maxi-external.jpg" alt="Maxi External" />
-        <h3>Maxi External</h3>
+        <img src="maxi-internal.jpg" alt="Maxi Internal" />
+        <h3>Maxi Internal</h3>
       </div>
       <div class="product">
         <img src="duo-external.jpg" alt="Duo External" />
         <h3>Duo External</h3>
       </div>
       <div class="product">
-        <img src="maxi-internal.jpg" alt="Maxi internal" />
+        <img src="maxi-external.jpg" alt="Maxi External" />
         <h3>Maxi External</h3>
       </div>
     </div>
